@@ -9,6 +9,10 @@
      when describing the -o option, give -o Protocol=1 as the specific example
      since we are SICK AND TIRED of clueless people who cannot have difficulty
      thinking on their own.
+   - markus@cvs.openbsd.org 2001/08/08 18:20:15
+     [uidswap.c]
+     permanently_set_uid is a noop if user is not privilegued;
+     fixes bug on solaris; from sbi@uchicago.edu
 
 20010814
  - (stevesk) sshpty.c, cray.[ch]: whitespace, formatting and cleanup
